 NEWS/ChangeLog for JRI
--------------------------

0.5-1	(under development)

0.5-0	2009-08-22
    o	API 1.9: added rniPreserve, rniRelease, rniParentEnv, rniFindVar,
	         rniListEnv, rniSpecialObject, rniPrintValue,
		 rniGetRawArray, rniPutRawArray, rniGetAttrNames methods
		 added jriLoaded field (boolean)

    o	new REngine-based API (org.rosuda.REngine.JRI.JRIEngine)
	has been created - this allows the same code to interface
	JRI or Rserve without re-compilation

	Note: the JAR files are currently shipped separately from the JRI
	installation and can be obtained from
	http://rforge.net/JRI/files/

    o	proxy references are now preserved until finalized

    o	if jri.ignore.ule=yes property is set, JRI will not abort on
	failing to load the JRI library (UnsatisfiedLinkException).
	This can be used by GUIs to display a more meaningful message
	instead of abort. The jriLoaded flag is false in that case.

0.4-2
    o	declare string encoding as UTF-8 and convert incoming strings
	to UTF-8 if possible (R >= 2.7.0 required).

0.4-1	(part of rJava 0.5-1 and later)
    o	fixed configuration to work with multi-arch builds

0.4-0	2007-08-22 (part of rJava 0.5-0)
    o	adapt to changes in R-devel

    o	add -I. to CFLAGS for compatibility (thanks to BDR)

    o	added RConsoleOuputStream class

    o	API 1.8: added rniPrint, added int oType parameter to the
	rWriteConsole callback

    o	work around broken MinGW runtimes

    o	allow JRI to hook into a running R process (and thusly provide
	rJava with callbacks)

    o	added: inMainRThread(), isStandAlone()

    o	include configure in SVN and don't rebuild it on mkdist

0.3-7	2006-01-14
    o	make sure rniJavaToXref creates a global reference

    o	API 1.7: rniCons can accept two new arguments: tag and lang
	rniLCons was added

    o	assign now supports raw REXPs (XT_NONE)

    o	createRJavaRef was added to create jobjRef R objects from
	Java objects

0.3-6	2006-11-29
    o	adapted to API change in R-devel
